--- a/vigilnet-hub/package.json
+++ b/vigilnet-hub/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.5.1",
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
